--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  
+ <link rel=”icon” href=”favicon.ico”>
+  
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Personal Page of Burak Akten">
